# Speciale

./: .gitignore  .gitmodules  AI-declaration-ENG.odt  README.md  TODO.md  context_switch_overview.md  podman.sh
condensed_report/: TUptm.fd  main.tex
condensed_report/sections/: abstract.tex  background.tex  conclusion.tex  design.tex  discussion.tex  evaluation.tex  implementation.tex  introduction.tex  related_work.tex
notes/: OS_abstraction.md  Presentation.md
notes/meeting/: 1.md  3.md
presentation/: KUstyle.sty  TODO.md  main.tex
presentation/figures/: dynamic_domain_sched.tex  priority_sched.tex
presentation/slides/: analysis.tex  background.tex  evaluation.tex  future_work.tex  implementation.tex  introduction.tex  motivation.tex  related_work.tex
report/: .latexmkrc  ku-frontpage.sty  main.bbl-SAVE-ERROR  main.bcf-SAVE-ERROR  main.tex  refs.bib
report/figures/: blinky_timeline.tex  domain_full.tex  dynamic_domain_sched.tex  example_timeline_a.tex  example_timeline_b.tex  priority_sched.tex  static_domain_sched.tex
report/sections/: abstract.tex  analysis.tex  appendix.tex  background.tex  conclusion.tex  description.tex  discussion.tex  evaluation.tex  future_work.tex  introduction.tex  (+2 more)
src/: podman.sh
src/Cache_attacks/covert-channel-tutorial/channels/pp-l1d/: CMakeLists.txt
src/qemu_timing_plugin/: Cargo.toml  build.rs  wrapper_FreeRTOS.h  wrapper_qemu.h  wrapper_s3k.h
src/qemu_timing_plugin/src/: cache.rs  lib.rs  utils.rs
src/qemu_timing_plugin/src/utils/: FreeRTOS.rs  mod.rs  noop.rs  s3k.rs
src/qemu_timing_plugin/tests/: cache.rs
(+31 files in other folders)
