[package]
name = "qemu_timing_plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cty = "0.2.2"
lazy_static = "1.4"
object = "0.38.1"
queues = "1.1.0"
rand = "0.10.0"
sprintf = "0.4.3"

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3.32"
num_cpus = "1.17.0"

[features]
default = []

retriever = []
s3k = ["retriever"]
FreeRTOS = ["retriever"]
noop = []
